--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,19 @@ body {
 a {text-decoration: none;}
 ul {list-style: none;}
 
+.visually-hidden {
+        position: absolute;
+        width: 1px;
+        height: 1px;
+        margin: -1px;
+        border: 0;
+        padding: 0;
+
+        white-space: nowrap;
+        clip-path: inset(100%);
+        overflow: hidden;
+}
+
 .header-logo {
         color:#4D5AE5;
         font-family: Raleway, sans-serif;
@@ -29,4 +42,167 @@ ul {list-style: none;}
         font-weight: 500;
         line-height: 1.5;
         letter-spacing: 0.02em;
+
+}
+
+.header-menu-link:hover {
+        color: #404BBF;
+}
+
+.header-menu-link:active {
+        color: #404BBF;
+}
+
+.header-list-link {
+        color: #434455;
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+}
+
+.header-list-link:hover {
+        color: #404BBF; 
+}
+
+.hero {
+        background: #2E2F42;
+}
+
+
+.hero-title {
+        color:#FFF;
+        text-align: center;
+        font-size: 56px;
+        font-weight: 700;
+        line-height: 1.07;
+        letter-spacing: 0.02em;
+}
+
+.hero-order-btn {
+        cursor: pointer;
+        color:#FFF;
+        font-family: inherit;
+        font-size: 16px;
+        font-weight: 500;
+        line-height: 1.5;
+        letter-spacing: 0.04em;
+        border-radius: 4px;
+        background: #4D5AE5;
+        box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+}
+
+.features {}
+
+.features-list {}
+
+.features-item {}
+
+.features-subtitle {
+        color: #2E2F42;
+        font-size: 20px;
+        font-weight: 500;
+        line-height: 1.2;
+        letter-spacing: 0.02em;
+}
+
+.features-item-text {
+        color: #434455;
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+}
+
+
+.team {}
+
+.ourteam-title {
+        color: #2E2F42;
+        text-align: center;
+        font-size: 36px;
+        font-weight: 700;
+        line-height: 1.1;
+        letter-spacing: 0.02em;
+        text-transform: capitalize;
+}
+
+.team-list {}
+
+.team-item {}
+
+.team-img {
+
+
+}
+
+.team-subtitle {
+        color: #2E2F42;
+        text-align: center;
+        font-size: 20px;
+        font-weight: 500;
+        line-height: 1.2;
+        letter-spacing: 0.02em;
+}
+
+.team-text {
+        color: #434455;
+        text-align: center;
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+}
+
+.portfolio {}
+
+.portfolio-title {
+        color: #2E2F42;
+        text-align: center;
+        font-size: 36px;
+        font-weight: 700;
+        line-height: 1.1;
+        letter-spacing: 0.02em;
+        text-transform: capitalize;
+}
+
+.portfolio-list {}
+
+.portfolio-item {}
+
+.portfolio-img {}
+
+.portfolio-subtitle {
+        color: #2E2F42;
+        font-size: 20px;
+        font-weight: 500;
+        line-height: 1.2;
+        letter-spacing: 0.02em;
+}
+
+.portfolio-text {
+        color: #434455;
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+}
+
+
+.footer-text {
+        color: #F4F4FD;
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+}
+
+.footer {
+        background: #2E2F42;
+}
+
+.footer-logo {
+        color:#F4F4FD;
+        font-family: Raleway;
+        font-size: 18px;
+        font-weight: 700;
+        line-height: 1.7;
+        letter-spacing: 0.03em;
+        text-transform: uppercase;
 }
